--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.1.2
   carousel_slider: ^4.2.1
+  lottie: ^3.1.0
+  hive: ^2.2.3
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -48,6 +52,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.9
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
